@@ -1,3 +1,9 @@
+Fri Nov 14 10:59:00 UTC 2008  Simon Massey  <sma at prismtech dot com>
+
+        * tests/Log_Thread_Inheritance_Test.cpp:
+
+          wchar fix.
+
 Thu Nov 13 09:53:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Malloc_Test.cpp:
